REUSE-ify everything
• JS/CSS with snippet tags
• the rest with file tags
• uncommentable via REUSE.toml

Signed-off-by: Matija Šuklje <matija.suklje@liferay.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+/*!
+ * SPDX-SnippetBegin
+ * SPDX-SnippetCopyrightText: CSSesna
+ * SPDX-License-Identifier: MIT
+ */
+
 .App {
   text-align: center;
 }
@@ -36,3 +42,5 @@
     transform: rotate(360deg);
   }
 }
+
+/*! SPDX-SnippetEnd */
